Trying to fix pic position bug on mobile

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,7 +24,7 @@ html {
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
-            align-items: flex-start;
+            align-items: center;
             height: 100%;
             -webkit-box-sizing: border-box;
             -moz-box-sizing: border-box;
@@ -37,6 +37,7 @@ html {
             -o-transition: opacity .6s;
             transition: opacity .6s;
             .titlebox-container {
+                align-self: flex-start;
                 text-align: center;
                 .titlebox {
                     background: $box-color;
@@ -57,7 +58,6 @@ html {
                 border-radius: 50%;
                 position: absolute;
                 top: 10px;
-                                align-self: center;
             }
             p {
                 overflow: visible;
